--- a/examples/makefile
+++ b/examples/makefile
@@ -1,5 +1,11 @@
-%: %.sgc | $(BUILD_DIR)
-	sgcc -O3 -o $@.o $<
+SOURCES := $(shell find . -name '*.sgc')
+OBJECTS := $(SOURCES:%.sgc=%.o)
+
+%.o: %.sgc | $(BUILD_DIR)
+	sgcc -O3 -o $@ $<
+
+.PHONY: all
+all: $(OBJECTS)
 
 .PHONY: clean
 
